--- a/about.html
+++ b/about.html
@@ -87,6 +87,7 @@
                                           joined another, growing both of them 300%. In addition to providing me with
                                           wonderful memories, all of these experiences have enhanced my skill sets,
                                           especially communication, adaptability, and collaborative skills.<br>
+
                                     <p class="wow fadeInUp" data-wow-delay="0.4s">
                                           I've always been curious about software development, but I never considered it
                                           as a path to take. At one point in my life, I couldn't imagine my future. I
@@ -97,23 +98,25 @@
                                           Started by learning how to learn and diving into programming fundamentals. A
                                           turning point for me was when I joined Harvard's CS50 course.</p>
 
-                                    <p class="wow fadeInUp" data-wow-delay="0.3s">Anyway, apparently that happiness and
-                                          satisfaction in building things with Lego blocks that I had as a kid was
-                                          slowly coming back. This time as colored characters in a dark-themed code
-                                          editor. Now I had the answer to many of the holes in my life and I could
-                                          foresee my future, and all my new life goals. I get excited about the
-                                          possibility of working with something that keeps me motivated, curious and
-                                          requires constant pursuit of knowledge and the use of both logical and
-                                          creative reasoning. Additionally, the ones and zeros and the World Wide Web
-                                          are the greatest collective inventions ever made by mankind. There is no way
-                                          to feel more alive.</p><br>
+                                    <p class="wow fadeInUp" data-wow-delay="0.3s">Fast-forward, and it seemed that the
+                                          happiness and satisfaction in building things with Lego blocks that I had as a
+                                          kid was slowly coming back. This time as colored characters in a dark-themed
+                                          code editor. Now I had the answer to many of the holes in my life, and I
+                                          finally could foresee my future and goals. I get excited about the possibility
+                                          of working with something that keeps me motivated, curious and requires
+                                          constant pursuit of knowledge and the use of both logical and creative
+                                          reasoning. Additionally, the ones and zeros and the World Wide Web are the
+                                          greatest collective inventions ever made by mankind. There is no way to feel
+                                          more alive.</p>
                                     <p class="wow fadeInUp" data-wow-delay="0.2s">
-                                          On a daily basis, I keep myself as healthy as possible, whether it be road
-                                          cycling, running or eating healthy. I enjoy solitude and mindfulness, and some
-                                          slow tasks like carpentry and bike maintenance, but cooking and drinking wine
-                                          with loved ones? Count me in! Whenever I sit in front of a computer, I always
-                                          want to make it useful and satisfying for me or for other people. The stack I
-                                          run at the moment is designed with that in mind, to solve our problems.</p>
+                                          In my free time, I love staying active and healthy through road cycling,
+                                          running, and eating well. I find joy in the little things and always make time
+                                          for the things that matter to me. I enjoy quiet moments of solitude and
+                                          mindfulness, as well as the satisfaction of slow-paced tasks such as carpentry
+                                          and bike maintenance. However, I also relish the joy of cooking and sharing a
+                                          glass of wine with loved ones. On top of that, I love to code and create
+                                          something just for fun. No pressure, just a chance to challenge myself and be
+                                          creative.</p>
 
                               </div>
                         </div>
@@ -174,12 +177,15 @@
                                           <br><br>
                                     </div>
                               </div>
+                              <br><br>
+                              <h6 style="font-size: 80%;" align="center">Made with care and attention to detail (and
+                                    lots of coffee and web consultation) by me :)</h6><br>
                         </div>
                   </div>
             </div>
             <!--------------- footer ends here --------------->
 
-            <br><br><br><br>
+            <br><br>
 
       </div>
 
