--- a/pomodoro.html
+++ b/pomodoro.html
@@ -74,30 +74,33 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Project Name</h1><br><br>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s">CLI pomodoro Timer</h1><br><br>
 
                                     <div class="row">
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.2s">service :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">Web Development</h6>
+                                                <p class="wow fadeInUp" data-wow-delay="1.2s">type :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">Bash Scripting</h6>
                                           </div>
 
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.4s">started :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">8 May 2019</h6>
+                                                <p class="wow fadeInUp" data-wow-delay="1.4s">created in :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">january 2023</h6>
                                           </div>
 
-                                          <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.6s">completed :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">15 May 2019</h6>
-                                          </div>
                                     </div>
                                     <br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Lorem ipsum dolor sit amet,
-                                          consectetur adipisicing elit. Earum officia molestiae laboriosam, rem
-                                          reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni,
-                                          enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores
-                                          aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Find it here: <a
+                                                href="https://github.com/FelixOakz/bash-pomodoro">github repo</a>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">CLI Pomodoro Timer is a simple
+                                          command-line Pomodoro timer written in bash that allows you to quickly set a
+                                          timer in the terminal. To use, make the script executable and run it with an
+                                          integer argument representing the duration of the Pomodoro in minutes. The
+                                          script will display a progress bar and once the timer is finished, display a
+                                          system notification and play an alert sound. This script has been tested on
+                                          Linux systems and uses the commands notify-send and paplay, which may not be
+                                          present on other operating systems. Contributions to the project are welcome
+                                          through pull requests or issues. The project is licensed under the MIT
+                                          License.</p>
                               </div>
                         </div>
                   </div>
