--- a/simulations.html
+++ b/simulations.html
@@ -74,30 +74,37 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Project Name</h1><br><br>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Run World Cup Simulations</h1><br><br>
 
                                     <div class="row">
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.2s">service :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">Web Development</h6>
+                                                <p class="wow fadeInUp" data-wow-delay="1.2s">type :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">Python Script</h6>
                                           </div>
 
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.4s">started :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">8 May 2019</h6>
+                                                <p class="wow fadeInUp" data-wow-delay="1.4s">created in :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">october 2022</h6>
                                           </div>
 
-                                          <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.6s">completed :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">15 May 2019</h6>
-                                          </div>
                                     </div>
                                     <br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Lorem ipsum dolor sit amet,
-                                          consectetur adipisicing elit. Earum officia molestiae laboriosam, rem
-                                          reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni,
-                                          enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores
-                                          aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Find it here: <a
+                                                href="https://github.com/FelixOakz/Run-World-Cup-Simulations">github
+                                                repo</a>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">The code uses ELO rating system to
+                                          determine the probability of a team
+                                          winning a game and uses this information to simulate the entire tournament.
+                                          The result of each simulation is stored in a dictionary and at the end, the
+                                          chances of winning for each team are calculated based on the number of wins in
+                                          the simulations. The project uses the main() function to run the simulation N
+                                          number of times (default is 1000), where N is the number of times the
+                                          tournament is simulated. The code has three additional functions:
+                                          simulate_game(), simulate_round(), and simulate_tournament(). The final output
+                                          is the chances of winning for each team, sorted by the highest chances of
+                                          winning. This project can be run in a matter of milliseconds and the number of
+                                          simulations can be increased to obtain more accurate results, but this would
+                                          trade off with runtime.</p>
                               </div>
                         </div>
                   </div>
