--- a/stock.html
+++ b/stock.html
@@ -74,30 +74,36 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Project Name</h1><br><br>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s">stockXchange</h1><br><br>
 
                                     <div class="row">
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.2s">service :</p>
+                                                <p class="wow fadeInUp" data-wow-delay="1.2s">type :</p>
                                                 <h6 class="wow fadeInUp" data-wow-delay="1.3s">Web Development</h6>
                                           </div>
 
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.4s">started :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">8 May 2019</h6>
+                                                <p class="wow fadeInUp" data-wow-delay="1.4s">created in :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">january 2023</h6>
                                           </div>
 
-                                          <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.6s">completed :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">15 May 2019</h6>
-                                          </div>
                                     </div>
                                     <br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Lorem ipsum dolor sit amet,
-                                          consectetur adipisicing elit. Earum officia molestiae laboriosam, rem
-                                          reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni,
-                                          enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores
-                                          aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Find it live here: <a
+                                                href="https://stockxchange.onrender.com/">stockxchange.onrender.com</a>
+                                    </p>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">A web app that allows
+                                          you to manage portfolios of stocks and track their prices and portfolio values
+                                          in real-time. You can access your portfolios on the go with its mobile
+                                          compatibility and perform "buy" and "sell" transactions by querying an API for
+                                          their prices. Built with Flask and hosted on Render, it uses Jinja templating
+                                          engine, Bootstrap, and a bit of CSS for its client-side. The password is
+                                          hashed for security, and the API is accessed via an environment variable. The
+                                          app is a demo version using the AlphaVantage API and a local CSV file, but is
+                                          limited by the API's usage limits. This project started as a Harvard CS50
+                                          course project and has taught the developer valuable lessons for future
+                                          improvements, such as using more functions or Django for abstractions and
+                                          improving data source through a better API or web scraping.</p>
                               </div>
                         </div>
                   </div>
