--- a/work.html
+++ b/work.html
@@ -101,13 +101,13 @@
                         <div class="col-lg-8"></div>
 
                         <div class="col-lg-4 project project1 wow fadeInUp" data-wow-delay="1.4s"
-                              onclick="location.href='project.html'"></div>
+                              onclick="location.href='stock.html'"></div>
                   </div>
 
                   <div class="whitespace"></div>
 
                   <div class="row">
-                        <div class="col-lg-6 project project2 wow fadeInUp" onclick="location.href='project.html'">
+                        <div class="col-lg-6 project project2 wow fadeInUp" onclick="location.href='pomodoro.html'">
                         </div>
 
                         <div class="col-lg-6"></div>
@@ -118,7 +118,7 @@
                   <div class="row">
                         <div class="col-lg-7"></div>
 
-                        <div class="col-lg-4 project project3 wow fadeInUp" onclick="location.href='project.html'">
+                        <div class="col-lg-4 project project3 wow fadeInUp" onclick="location.href='simulations.html'">
                         </div>
 
                         <div class="col-lg-1"></div>
