--- a/work.html
+++ b/work.html
@@ -109,12 +109,9 @@
 
                   <div class="container">
                         <div class="hero-content">
-                              <br><br>
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <br>
-
-                                          <h1 class="wow fadeInUp" data-wow-delay="1s">stockXchange</h1><br><br>
+                                          <h1 class="wow fadeInUp" data-wow-delay="1s">stockXchange</h1><br>
 
                                           <div class="row">
                                                 <div class="col-lg-4">
@@ -170,13 +167,9 @@
                   </div>
                   <div class="container">
                         <div class="hero-content">
-                              <br><br>
                               <div class="row">
                                     <div class="col-lg-12">
-                                          <br>
-
-                                          <h1 class="wow fadeInUp" data-wow-delay="1s">CLI pomodoro Timer</h1><br><br>
-
+                                          <h1 class="wow fadeInUp" data-wow-delay="1s">CLI pomodoro Timer</h1><br>
                                           <div class="row">
                                                 <div class="col-lg-4">
                                                       <p class="wow fadeInUp" data-wow-delay="1.2s">type :</p>
@@ -189,7 +182,6 @@
                                                 </div>
 
                                           </div>
-                                          <br>
                                           <p class="wow fadeInUp" data-wow-delay="1.8s">Find it here: <a
                                                       href="https://github.com/FelixOakz/bash-pomodoro">github repo</a>
                                           <p class="wow fadeInUp" data-wow-delay="1.8s">CLI Pomodoro Timer is a simple
@@ -226,13 +218,10 @@
                         </div>
                         <div class="container">
                               <div class="hero-content">
-                                    <br><br>
                                     <div class="row">
                                           <div class="col-lg-12">
-                                                <br>
-
                                                 <h1 class="wow fadeInUp" data-wow-delay="1s">Run World Cup Simulations
-                                                </h1><br><br>
+                                                </h1><br>
 
                                                 <div class="row">
                                                       <div class="col-lg-4">
@@ -249,7 +238,6 @@
                                                       </div>
 
                                                 </div>
-                                                <br>
                                                 <p class="wow fadeInUp" data-wow-delay="1.8s">Find it here: <a
                                                             href="https://github.com/FelixOakz/Run-World-Cup-Simulations">github
                                                             repo</a>
