--- a/work.html
+++ b/work.html
@@ -109,6 +109,10 @@
                               <div class="row">
                                     <div class="col-lg-12">
                                           <h1 class="wow fadeInUp" data-wow-delay="1s">stockXchange</h1><br>
+                                          <a href="https://github.com/FelixOakz/stockXchange">
+                                                <img class="wow fadeInUp" data-wow-delay="1s" src="static/stock.png" alt="code image">
+                                              </a>
+                                              
 
                                           <div class="row">
                                                 <div class="col-lg-4">
