--- a/work.html
+++ b/work.html
@@ -110,10 +110,9 @@
                                     <div class="col-lg-12">
                                           <h1 class="wow fadeInUp" data-wow-delay="1s">stockXchange</h1><br>
                                           <a href="https://github.com/FelixOakz/stockXchange">
-                                                <img class="wow fadeInUp" data-wow-delay="1s" src="static/stock.png" alt="code image">
-                                              </a>
-                                              
-
+                                                <img class="wow fadeInUp" data-wow-delay="1s" src="static/stock.png"
+                                                      alt="code image">
+                                          </a>
                                           <div class="row">
                                                 <div class="col-lg-4">
                                                       <p class="wow fadeInUp" data-wow-delay="1.2s">type :</p>
@@ -163,6 +162,10 @@
                               <div class="row">
                                     <div class="col-lg-12">
                                           <h1 class="wow fadeInUp" data-wow-delay="1s">CLI pomodoro Timer</h1><br>
+                                          <a href="https://github.com/FelixOakz/bash-pomodoro">
+                                                <img class="wow fadeInUp" data-wow-delay="1s" src="static/pomodoro.png"
+                                                      alt="code image">
+                                          </a>
                                           <div class="row">
                                                 <div class="col-lg-4">
                                                       <p class="wow fadeInUp" data-wow-delay="1.2s">type :</p>
@@ -173,7 +176,6 @@
                                                       <p class="wow fadeInUp" data-wow-delay="1.4s">created in :</p>
                                                       <h6 class="wow fadeInUp" data-wow-delay="1.5s">january 2023</h6>
                                                 </div>
-
                                           </div>
                                           <p class="wow fadeInUp" data-wow-delay="1.8s">Find it here: <a
                                                       href="https://github.com/FelixOakz/bash-pomodoro">github repo</a>
@@ -206,7 +208,10 @@
                                     <div class="col-lg-12">
                                           <h1 class="wow fadeInUp" data-wow-delay="1s">Run World Cup Simulations
                                           </h1><br>
-
+                                          <a href="https://github.com/FelixOakz/Run-World-Cup-Simulations">
+                                                <img class="wow fadeInUp" data-wow-delay="1s"
+                                                      src="static/simulations.png" alt="code image">
+                                          </a>
                                           <div class="row">
                                                 <div class="col-lg-4">
                                                       <p class="wow fadeInUp" data-wow-delay="1.2s">type :</p>
@@ -220,7 +225,6 @@
                                                       <h6 class="wow fadeInUp" data-wow-delay="1.5s">october 2022
                                                       </h6>
                                                 </div>
-
                                           </div>
                                           <p class="wow fadeInUp" data-wow-delay="1.8s">Find it here: <a
                                                       href="https://github.com/FelixOakz/Run-World-Cup-Simulations">github
