--- a/work.html
+++ b/work.html
@@ -79,7 +79,7 @@
                         <br><br>
 
                         <div class="row">
-                              <div class="col-lg-10">
+                              <div class="col-lg-12">
 
                                     <h3 class="wow fadeInUp" data-wow-delay="1s">work.</h3><br>
                                     <p class="wow fadeInUp" data-wow-delay="1.2s">I have experience building web
@@ -91,8 +91,7 @@
                                           something that is not only meaningful and fulfilling to me, but also impactful
                                           and useful to others. That's why my current tech stack is curated with a
                                           purpose-driven mindset, aimed at solving real-world problems.<br><br><br>
-                                    <h4 class="wow fadeInUp" data-wow-delay="1.3s">Here are
-                                          some of my projects:</h4>
+                                    <h4 class="wow fadeInUp" data-wow-delay="1.3s">Selected projects:</h4>
 
                               </div>
                         </div>
@@ -116,22 +115,22 @@
                                           <div class="row">
                                                 <div class="col-lg-4">
                                                       <p class="wow fadeInUp" data-wow-delay="1.2s">type :</p>
-                                                      <h6 class="wow fadeInUp" data-wow-delay="1.3s">Web Development
+                                                      <h6 class="wow fadeInUp" data-wow-delay="1.2s">Web Development
                                                       </h6>
                                                 </div>
 
                                                 <div class="col-lg-4">
-                                                      <p class="wow fadeInUp" data-wow-delay="1.4s">created in :</p>
-                                                      <h6 class="wow fadeInUp" data-wow-delay="1.5s">january 2023</h6>
+                                                      <p class="wow fadeInUp" data-wow-delay="1.2s">created in :</p>
+                                                      <h6 class="wow fadeInUp" data-wow-delay="1.2s">january 2023</h6>
                                                 </div>
 
                                           </div>
-                                          <p class="wow fadeInUp" data-wow-delay="1.8s">Find it live here: <a
+                                          <p class="wow fadeInUp" data-wow-delay="1.4s">Find it live here: <a
                                                       href="https://stockxchange.onrender.com/">stockxchange.onrender.com</a>
                                                 or <a href="https://github.com/FelixOakz/stockXchange">Github
                                                       Repository</a>
                                           </p>
-                                          <p class="wow fadeInUp" data-wow-delay="1.8s">A web app that allows
+                                          <p class="wow fadeInUp" data-wow-delay="1.4s">A web app that allows
                                                 you to manage portfolios of stocks and track their prices and portfolio
                                                 values
                                                 in real-time. You can access your portfolios on the go with its mobile
@@ -166,17 +165,17 @@
                                           <div class="row">
                                                 <div class="col-lg-4">
                                                       <p class="wow fadeInUp" data-wow-delay="1.2s">type :</p>
-                                                      <h6 class="wow fadeInUp" data-wow-delay="1.3s">Bash Scripting</h6>
+                                                      <h6 class="wow fadeInUp" data-wow-delay="1.2s">Bash Scripting</h6>
                                                 </div>
 
                                                 <div class="col-lg-4">
-                                                      <p class="wow fadeInUp" data-wow-delay="1.4s">created in :</p>
-                                                      <h6 class="wow fadeInUp" data-wow-delay="1.5s">january 2023</h6>
+                                                      <p class="wow fadeInUp" data-wow-delay="1.2s">created in :</p>
+                                                      <h6 class="wow fadeInUp" data-wow-delay="1.2s">january 2023</h6>
                                                 </div>
                                           </div>
-                                          <p class="wow fadeInUp" data-wow-delay="1.8s">Find it here: <a
+                                          <p class="wow fadeInUp" data-wow-delay="1.4s">Find it here: <a
                                                       href="https://github.com/FelixOakz/bash-pomodoro">github repo</a>
-                                          <p class="wow fadeInUp" data-wow-delay="1.8s">CLI Pomodoro Timer is a simple
+                                          <p class="wow fadeInUp" data-wow-delay="1.4s">CLI Pomodoro Timer is a simple
                                                 command-line Pomodoro timer written in bash that allows you to quickly
                                                 set a
                                                 timer in the terminal. To use, make the script executable and run it
@@ -210,21 +209,21 @@
                                           <div class="row">
                                                 <div class="col-lg-4">
                                                       <p class="wow fadeInUp" data-wow-delay="1.2s">type :</p>
-                                                      <h6 class="wow fadeInUp" data-wow-delay="1.3s">Python Script
+                                                      <h6 class="wow fadeInUp" data-wow-delay="1.2s">Python Script
                                                       </h6>
                                                 </div>
 
                                                 <div class="col-lg-4">
-                                                      <p class="wow fadeInUp" data-wow-delay="1.4s">created in :
+                                                      <p class="wow fadeInUp" data-wow-delay="1.2s">created in :
                                                       </p>
-                                                      <h6 class="wow fadeInUp" data-wow-delay="1.5s">october 2022
+                                                      <h6 class="wow fadeInUp" data-wow-delay="1.2s">october 2022
                                                       </h6>
                                                 </div>
                                           </div>
-                                          <p class="wow fadeInUp" data-wow-delay="1.8s">Find it here: <a
+                                          <p class="wow fadeInUp" data-wow-delay="1.4s">Find it here: <a
                                                       href="https://github.com/FelixOakz/Run-World-Cup-Simulations">github
                                                       repo</a>
-                                          <p class="wow fadeInUp" data-wow-delay="1.8s">The code uses ELO rating
+                                          <p class="wow fadeInUp" data-wow-delay="1.4s">The code uses ELO rating
                                                 system to
                                                 determine the probability of a team
                                                 winning a game and uses this information to simulate the entire
